std=benchmarks/Bench have nop logger